# elt_pipelines

./: .env.example  .env.metadata.json  .gitignore  README.md  pyproject.toml  run_pipeline.sh
pipelines/dlt/demo_pipeline_friday/: README.md  config.yaml  dagster.yaml  pipeline.py
pipelines/dlt/friday_demo_pipeline/: README.md  dagster.yaml  pipeline.py
pipelines/dlt/github_issues/: config.yaml  dagster.yaml  pipeline.py
pipelines/dlt/hackernews/: config.yaml  dagster.yaml  pipeline.py
pipelines/dlt/hackernews_rest/: ADVANCED_CONFIG.md  dagster.yaml  pipeline.py
pipelines/dlt/jokes/: config.yaml  dagster.yaml  pipeline.py
pipelines/dlt/rest_api_pokemon/: config.yaml  dagster.yaml  pipeline.py
pipelines/dlt/salesforce_to_bigquery/: config.yaml  dagster.yaml  pipeline.py
pipelines/dlt/stripe_payments/: config.yaml  dagster.yaml  pipeline.py
pipelines/sling/mysql_to_postgres/: config.yaml  dagster.yaml  replication.yaml
pipelines/sling/postgres_to_duckdb/: config.yaml  dagster.yaml  replication.yaml
