[project]
name = "elt-pipelines-example"
version = "1.0.0"
description = "Example ELT pipelines using dlt and Sling - standalone or with Dagster"
requires-python = ">=3.9"

dependencies = [
    "dlt[duckdb]>=0.4.0",
    "sling>=1.2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dagster = [
    "dagster>=1.5.0",
    "dagster-webserver>=1.5.0",
]

snowflake = [
    "dlt[snowflake]>=0.4.0",
]

bigquery = [
    "dlt[bigquery]>=0.4.0",
]

postgres = [
    "dlt[postgres]>=0.4.0",
    "psycopg2-binary>=2.9.0",
]

all = [
    "dagster>=1.5.0",
    "dagster-webserver>=1.5.0",
    "dlt[snowflake,bigquery,postgres]>=0.4.0",
    "psycopg2-binary>=2.9.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"
